--- a/index.html
+++ b/index.html
@@ -3,34 +3,56 @@
 <head>
   <meta charset=utf-8 />
   <title>bg-splitter</title>
-  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
-  <style>
-    body
-    {
-      margin: 0px;
-      font-family: Arial, Helvetica, sans-serif;
-    }
 
-    .pane-container
-    {
-      padding: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
+
+  <script src="js/splitter.js"></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css" type="text/css" />
+
+  <script> angular.module('myApp', ['bgDirectives']); </script>
+
 </head>
 <body>
-  <bg-splitter orientation="horizontal">
-    <bg-pane min-size="100"><div class="pane-container">Pane 1</div></bg-pane>
-    <bg-pane min-size="150">
-      <bg-splitter orientation="vertical">
-        <bg-pane min-size="100" class="pane-container">Pane 2</bg-pane>
-        <bg-pane min-size="150" class="pane-container">Pane 3</bg-pane>
-      </bg-splitter>
-    </bg-pane>
-  </bg-splitter>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
-  <script src="js/splitter.js"></script>
-  <script>
-    angular.module('myApp', ['bgDirectives']);
-  </script>
+
+  <div class="container-fluid">
+
+    <div class="row" style="padding-left: 30px">
+      <h1>Split view</h1>
+    </div>
+
+    <div class="row">
+
+      <div style="margin: 80px;">
+        <bg-splitter class ="panel panel-default" orientation="horizontal" style="margin: inherit">
+          <bg-pane min-size="40" label="Window Top">
+            <bg-splitter orientation="vertical">
+              <bg-pane min-size="40" label="Window Right">
+                <ng-include src="'views/left-up-window.htm'"></ng-include>
+              </bg-pane>
+              <bg-pane min-size="40" label="Window Left">
+                <ng-include src="'views/right-up-window.htm'"></ng-include>
+              </bg-pane>
+            </bg-splitter>
+          </bg-pane>
+          <bg-pane min-size="50" label="Window buttom">
+            <h3 style="margin-left: 20px;">1st graph inner label</h3>
+            <div class="col-md-12">
+              <ng-include src="'views/bottom-down.htm'"></ng-include>
+            </div>
+          </bg-pane>
+        </bg-splitter>
+      </div>
+
+    </div>
+  </div>
+
 </body>
 </html>
